# kovi-bot

./: .gitignore  Cargo.toml  ENHANCED_FEATURES.md  ENHANCED_FEATURES_SUMMARY.md  FINAL_IMPROVEMENTS_SUMMARY.md  README.md  USAGE_EXAMPLE.md  kovi.conf.toml  kovi.plugin.toml  test_api.http
.github/workflows/: deplay.yml
plugins/model/: Cargo.toml  application.yaml  kovi.plugin.toml
plugins/model/src/: lib.rs
plugins/model/src/config/: mod.rs  prompt.rs  server.rs
plugins/model/src/health_check/: mod.rs
plugins/model/src/memory/: mod.rs
plugins/model/src/model/: group.rs  mod.rs  private.rs  utils.rs
plugins/model/src/mood_system/: mod.rs
plugins/model/src/proactive_chat/: mod.rs  startup.rs
plugins/model/src/topic_generator/: mod.rs
plugins/model/src/utils/: mod.rs  system_info.rs
src/: main.rs
