[package]
name = "model"
version = "0.1.0"
edition = "2024"

[dependencies]
kovi.workspace = true
reqwest.workspace = true
serde = { version = "1.0.219", features = ["derive"] }
sysinfo = "0.35.2"
chrono.workspace = true
systemstat= "0.2.1"
config = {version = "0.15.11", features = ["yaml"]}
anyhow = {version = "1.0.98"}